src/test/resources/testinput/parsable/symtab/invalid_coco/comprehension3.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl comprehension3 {
  context Auction a inv:
    let
      List<Long> tlist = [m.time | Message m in a.message]
    in
      true;
}
